--- a/test_app/app/views/layouts/application.html.erb
+++ b/test_app/app/views/layouts/application.html.erb
@@ -51,8 +51,8 @@
     <nav class="main-nav">
       <h1>Rails MCP Engine Manual Playground</h1>
       <div class="nav-links">
-        <a href="<%= root_path %>" class="nav-link">MCP</a>
-        <a href="<%= chat_path %>" class="nav-link">Chat</a>
+        <a href="/rails_mcp_engine/playground" class="nav-link">MCP</a>
+        <a href="/rails_mcp_engine/chat" class="nav-link">Chat</a>
       </div>
     </nav>
     <%= yield %>
